.helm/api-tips-backend/templates/envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: api-tips
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: grpc_listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8081
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: AUTO
                    stat_prefix: ingress_grpc
                    route_config:
                      name: grpc_route
                      virtual_hosts:
                        - name: backend_grpc
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: api_tips_grpc
                              typed_per_filter_config:
                                envoy.filters.http.cors:
                                  "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                                  allow_origin_string_match:
                                    - exact: "https://localhost:8080"
                                    - exact: "https://localhost:3000"
                                    - exact: "https://beta.api-tips.quckoo.net"
                                    - safe_regex:
                                        google_re2: {}
                                        regex: "^https://.*\\.quckoo\\.net$"
                                  allow_methods: "GET, PUT, DELETE, POST, OPTIONS"
                                  allow_headers: "keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization,grpc-method-query-time"
                                  expose_headers: "grpc-status,grpc-message"
                                  max_age: "1728000"
                    http_filters:
                      - name: envoy.filters.http.grpc_web
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        - name: http_listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: http_route
                      virtual_hosts:
                        - name: backend_http
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/auth"
                              route:
                                cluster: api_tips_http
                    http_filters:
                      - name: envoy.filters.http.cors
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: api_tips_grpc
          connect_timeout: 0.25s
          type: STRICT_DNS
          http2_protocol_options: {}
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: api_tips_grpc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: api-tips-backend.api-tips.svc.cluster.local
                          port_value: 30002
        - name: api_tips_http
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: api_tips_http
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: api-tips-backend.api-tips.svc.cluster.local
                          port_value: 30001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: api-tips
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.32.3
          args:
            - "--config-path"
            - "/etc/envoy/envoy.yaml"
          ports:
            - containerPort: 8080
            - containerPort: 8081
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy/envoy.yaml
              subPath: envoy.yaml
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: api-tips
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: grpc
      port: 81
      targetPort: 8081
  selector:
    app: envoy
